force-app/main/default/objects/Engagement__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Rate__c</fullName>
        <label>Billing Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(5 * ( FLOOR( (  End_Date__c  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
 End_Date__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( (  Start_Date__c  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
Start_Date__c - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Engagement__c</fullName>
        <formula>Billing_Rate__c  *  Duration__c  * 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total_Engagement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Engagement</label>
    <nameField>
        <displayFormat>ENG-{0000}</displayFormat>
        <label>Engagement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_of_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c  &lt; Start_Date__c</errorConditionFormula>
        <errorMessage>End Date should not be less than start date</errorMessage>
    </validationRules>
</CustomObject>